# python-playground

atcoder/: pyproject.toml
atcoder/abc173/: a.py  b.py
atcoder/abc206/: a.py  b.py  c.py
atcoder/tests/: test_atcoder.py
image-py/: metrics.py  pyproject.toml  random_noise.py  translation_image.py
memos/: .gitignore  auto_reload.py  auto_reload_sample.ipynb  chain.py  integrate.py  open_multi_files.py  pyproject.toml
memos/.ipynb_checkpoints/: auto_reload_sample-checkpoint.ipynb  test-checkpoint.py
memos/models/: __init__.py  test1.py
pysimplgui_sample/: main.py  pyproject.toml
pytorch_env/: BERT_sample.ipynb  Untitled.ipynb  pyproject.toml
pytorch_mps/: .envrc  environment.yml  main.py
slack_notifier/: .env.sample  example.py  pyproject.toml  slack_app.py
transformers_env/: .envrc  generate_text_by_gpt.py  generate_text_by_t5.py  init.sh  requirements.txt
transformers_env/layoutlm/: main.py
type/: prac.py
