[tool.poetry]
name = "memos"
version = "0.1.0"
description = ""
authors = ["moisutsu <moisutsu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sympy = "^1.6.2"
numpy = "^1.19.2"
knockknock = "^0.1.8"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
