[tool.poetry]
name = "pytorch_env"
version = "0.1.0"
description = ""
authors = ["moisutsu <moisutsu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.5.1"
mecab-python3 = "^1.0.1"
transformers = "^3.0.2"
ipywidgets = "^7.5.1"
torchtext = "^0.6.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
